# prod_lvl_prj_tpl

./: .gitmodules  CMakeLists.txt  README.md  build.sh  get_submodule.sh  toolchain.camke.gcc
src/: CMakeLists.txt  plat_version.h
src/demo/: CMakeLists.txt  main.cpp
src/demo/module/: printData.cpp  printData.hpp
src/demo/uttest/: ut_printData.cpp
src/dynamiclibdemo/: CMakeLists.txt
src/dynamiclibdemo/include/: add.hpp
src/dynamiclibdemo/module/: add.cpp
src/dynamiclibdemo/uttest/: ut_add.cpp
src/staticlibdemo/: CMakeLists.txt  project_version.h
src/staticlibdemo/inc/: sub.hpp
src/staticlibdemo/module/: sub.cpp
src/staticlibdemo/uttest/: ut_sub.cpp
